# paat

./: .gitignore  README.md  pyproject.toml  tolen.txt
models/tokenizers/adat/adat/: adat_log.json  iter_01_vocab53333.json  iter_02_vocab42666.json  tokenizer.json
models/tokenizers/adat/baseline/: sp.model  sp.vocab  tokenizer.json
models/tokenizers/adat/sp_init/: sp.model
models/tokenizers/bpe/: tokenizer.json
models/tokenizers/paat_a033/paat/: iter_01_vocab53333.json  iter_02_parity.json  iter_02_vocab42666.json  iter_03_parity.json  paat_log.json  tokenizer.json
models/tokenizers/paat_a033/sp_init/: sp.model
models/tokenizers/paat_a067/paat/: iter_01_vocab53333.json  iter_02_parity.json  iter_02_vocab42666.json  iter_03_parity.json  paat_log.json  tokenizer.json
models/tokenizers/paat_a067/sp_init/: sp.model
models/tokenizers/paat_a10/paat/: iter_02_vocab42666.json  (+2 more)
models/tokenizers/parity_bpe/: merges.txt  tokenizer.json  vocab.json
notebooks/: paat_loss_components.ipynb  sample_responses.ipynb
results/: parity_cross_domain.json
results/parity_bible/: comparison.json
results/parity_ntrex/: comparison.json
scripts/: cloud_launch.sh  compare_cross_domain.py  download_bible.py  download_flores.py  download_mc4.py  download_ntrex.py  eval_downstream.py  eval_parity.py  eval_perplexity.py  exp_1_tokenizers.sh  exp_1_tokenizers_single_paat.sh  exp_2_pretrain_eval.sh  exp_3_generalization.sh  init_data_volume.sh  pack_bundle.sh  pretrain_lm.py  run_adat.py  run_full_pipeline.sh  run_paat.py  run_paat_local.sh  sample_mc4.py  setup_pod.sh  train_parity_bpe.py  train_tokenizer.py
src/paat/data/: languages.py
src/paat/model/: train.py  transformer.py
src/paat/parity/: metrics.py
src/paat/tokenizer/: adat.py  paat.py  train.py  unigram.py
(+34 files in other folders)
